--- a/Maiya Labeler 麦丫标签机/MaiyaLabeler.csproj
+++ b/Maiya Labeler 麦丫标签机/MaiyaLabeler.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Source\LabelRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\LabelerMapComponent.cs" />
+    <Compile Include="Source\MainButtonWorker_Labeler.cs" />
+    <Compile Include="Source\MaiyaLabelerDefOf.cs" />
     <Compile Include="Source\MaiyaLabelerMod.cs" />
     <Compile Include="Source\MaiyaLabeler_RimTalk_Patch.cs" />
   </ItemGroup>
@@ -80,13 +82,29 @@
     <Content Include="About\About.xml" />
     <Content Include="About\Preview.png" />
     <Content Include="Defs\KeyBindings.xml" />
+    <Content Include="Defs\MainButtonDefs\MaiyaLabeler_MainButton.xml" />
+    <Content Include="Languages\ChineseSimplified\DefInjected\KeyBindingCategoryDef\MaiyaLabeler_KeyBindings.xml" />
+    <Content Include="Languages\ChineseSimplified\DefInjected\KeyBindingDef\MaiyaLabeler_KeyBindings.xml" />
+    <Content Include="Languages\Japanese\DefInjected\KeyBindingCategoryDef\MaiyaLabeler_KeyBindings.xml" />
+    <Content Include="Languages\Japanese\DefInjected\KeyBindingDef\MaiyaLabeler_KeyBindings.xml" />
+    <Content Include="Languages\Japanese\DefInjected\MainButtonDef\MaiyaLabeler_MainButton.xml" />
+    <Content Include="Languages\Korean\DefInjected\KeyBindingCategoryDef\MaiyaLabeler_KeyBindings.xml" />
+    <Content Include="Languages\Korean\DefInjected\KeyBindingDef\MaiyaLabeler_KeyBindings.xml" />
+    <Content Include="Languages\Korean\DefInjected\MainButtonDef\MaiyaLabeler_MainButton.xml" />
     <Content Include="Languages\Korean\Keyed\MaiyaLabeler_Keys.xml" />
+    <Content Include="Languages\Russian\DefInjected\KeyBindingCategoryDef\MaiyaLabeler_KeyBindings.xml" />
+    <Content Include="Languages\Russian\DefInjected\KeyBindingDef\MaiyaLabeler_KeyBindings.xml" />
+    <Content Include="Languages\Russian\DefInjected\MainButtonDef\MaiyaLabeler_MainButton.xml" />
     <Content Include="Languages\Russian\Keyed\MaiyaLabeler_Keys.xml" />
     <Content Include="Languages\Japanese\Keyed\MaiyaLabeler_Keys.xml" />
     <Content Include="Languages\English\Keyed\MaiyaLabeler_Keys.xml" />
     <Content Include="Languages\ChineseSimplified\Keyed\MaiyaLabeler_Keys.xml" />
+    <Content Include="Textures\UI\Icons\MaiyaIcon.png" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Content Include="Languages\ChineseSimplified\DefInjected\MainButtonDef\MaiyaLabeler_MainButton.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>REM ================= 配置路径 =================
