解决奥德赛飞船跨地图后标签重置问题

--- a/Maiya Labeler 麦丫标签机/MaiyaLabeler.csproj
+++ b/Maiya Labeler 麦丫标签机/MaiyaLabeler.csproj
@@ -69,6 +69,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Source\CompRoomAnchor.cs" />
     <Compile Include="Source\Dialog_LabelConfig.cs" />
     <Compile Include="Source\LabelRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
